# python_hu4

./: .env-example  .gitignore  README.md  pyproject.toml  quotes.csv  requirements.txt  tasks.txt  weather_log.db
homeworks/bakosattila/: args_kwargs.py  fictive_chracter.py  functions_basic.py  project.py  return.py  user_info.py
homeworks/budaikrisztian/hw_10_web_scraping/: .env-example  .gitignore  README.hu.md  README.md  pyproject.toml  requirements.txt
homeworks/budaikrisztian/hw_10_web_scraping/output/: .gitkeep
homeworks/budaikrisztian/hw_10_web_scraping/src/quotes_scraper/: __init__.py  app.py  config.py  main.py
homeworks/budaikrisztian/hw_10_web_scraping/src/quotes_scraper/browser/: __init__.py  driver_factory.py
homeworks/budaikrisztian/hw_10_web_scraping/src/quotes_scraper/models/: quote.py
homeworks/budaikrisztian/hw_10_web_scraping/src/quotes_scraper/pages/: __init__.py  base_page.py  home_page.py  tag_page.py
homeworks/budaikrisztian/hw_10_web_scraping/src/quotes_scraper/scrapers/: __init__.py  quotes_scraper.py
homeworks/budaikrisztian/hw_10_web_scraping/src/quotes_scraper/storage/: csv_writer.py
homeworks/darvasmagdolna/: gyakorlas.py
homeworks/nagygabor/: hw_05_cars_mileage.py  nagygabor_homework_02_user_info.py
homeworks/vaseva/: hellopy.py
lessons/lesson_01/: main.py  virtual_env_practice.py
lessons/lesson_03/: basic_operators.py  type_conversion.py  variable_basics.py  working_with_strings.py
lessons/lesson_04/: dictionaries.py  lists.py  multi_dimensional_list.py  mutable_immutable.py  sets.py  tuples.py  unpacking.py
(+447 files in other folders)
